# GFXLabs

./: README.md  lab1a.html  lab1a.js  readme.txt  webgl-utils.js
js/: lab1a.js
js/webgl-resources/: global.js  obj-parser.js  shader.js  shape.js  webgl-utils.js
lab0/: lab0.html  readme.txt  webgl-utils.js
lab1a/js/: lab1a.js
lab1b/: README.md  lab1b.html
lab1b/js/: lab1b.js
lab1b/sampleModels/: bunny_smooth_material.mtl
lab1b/shaders/: gouraud.vert  gouraud_spec.vert  (+3 more)
lab1c/: README.md  lab1c.html  style.css
lab3a/: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  color.cpp  color.h  lab3a.cpp  light.h  material.h  mesh.cpp  mesh.h  parallellight.cpp  parallellight.h  point3d.cpp  point3d.h  pointlight.h  ray3d.cpp  ray3d.h  raysphereintersection.h  scene.cpp  scene.h  sphere.cpp  sphere.h  surface.cpp  surface.h  vec3.cpp  vec3.h
lab3a/xml/: black_file.xml
lab3b/: CMakeLists.txt  README.md  color.cpp  color.h  lab3b.cpp  light.h  material.cpp  material.h  mesh.cpp  parallellight.h  point2d.h  pointlight.h  scene.cpp  scene.h  sphere.cpp  sphere.h  surface.h  vec3.cpp
lab3b/lights/: light.h
lab3b/materials_and_colors/: color.cpp  material.cpp  material.h
lab3b/points_and_matrices/: mat3.cpp  mat3.h  point2d.cpp  point2d.h  point3d.cpp
lab3b/scenes_and_cameras/: camera.cpp  camera.h  scene.cpp  scene.h
lab3b/surfaces/: mesh.cpp  mesh.h  sphere.cpp  sphere.h  surface.h
lab3b/vectors_and_rays/: ray3d.cpp  ray3d.h
pap/: PenAndPaper.md  PenAndPaper_print_to_pdf.ipynb  PenAndPaper_print_to_pdf.md
shaders/: default.vert
(+43 files in other folders)
